# Genetic-Algorithm-Reversi-SDL

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Heuristic.cpp  Heuristic.h  README.md  Triple.cpp  Triple.h  main.cpp
